--- a/docs/partials/nav.html
+++ b/docs/partials/nav.html
@@ -1,4 +1,4 @@
-<!-- partials/nav.html -->
+<!-- nav.html -->
 <head>
     <!-- Google Tag Manager -->
 <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
@@ -7,55 +7,54 @@
     'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
     })(window,document,'script','dataLayer','GTM-MWQLLMSF');</script>
     <!-- End Google Tag Manager -->
+    <link rel="stylesheet" href="dark-theme.css" id="theme">
 </head>
 
 <!-- Navbar (sit on top) -->
-<div class="nav-top">
-    <div class="nav-bar" id="myNavbar">
-        <a href="/index.html" class="nav-item button nav-wide">
-            <img src="/asset/CWP_logo_static_edited_Transparant.png" alt="logo for CWP" class="logo"/>
+<div class="w3-top">
+    <div class="w3-bar w3-card" id="myNavbar">
+        <a href="/index.html" class="w3-bar-item w3-button w3-wide">
+            <img src="asset/CWP_logo_static_edited_Transparant.png" alt="logo for CWP" class="logo"/>
         </a>
         <!-- Right-sided navbar links -->
         <div class="nav-links">
-            <a href="/pages/about_us.html" class="nav-link nav-item">ABOUT</a>
-            <div class="nav-links nav-item dropdown">
-                <button class="nav-link button">OUR CREATIONS</button>
-                <div class="dropdown-content bar-block border">
-                    <a href="/pages/pixelpals/" class="nav-link bar-item button">LIVING PORTRAITS</a>
-                    <a href="/pages/frameforge/" class="nav-link bar-item button">ANIMATED HOMUNCULI</a>
-                    <a href="/pages/cwp-studio/" class="nav-link bar-item button">INTERACTIVE CONTRAPTIONS</a>
+            <a href="/about_us.html" class="nav-link w3-bar-item">ABOUT US</a>
+            <div class="nav-links w3-bar-item w3-dropdown-hover" style="padding: 0px 0px 0px 0px">
+                <button class="nav-link w3-botton">OUR WORK</button>
+                <div class="w3-dropdown-content w3-bar-block w3-border">
+                    <a href="/pixelpulse.html" class="nav-link w3-bar-item w3-button">PIXELPULSE</a>
+                    <a href="/frameforge.html" class="nav-link w3-bar-item w3-button">FRAMEFORGE</a>
+                    <a href="/cwp_studio.html" class="nav-link w3-bar-item w3-button">CWP Studio</a>
                 </div>
             </div>
-            <a href="/pages/meet_the_crew.html" class="nav-link nav-item">THE ARTISANS</a>
-            <a href="/pages/contact.html" class="nav-link nav-item">CONTACT</a>
-            <a href="/pages/community.html" class="nav-link nav-item">THE GUILD</a>
-            <a href="/pages/the_aetherium.html" class="nav-link nav-item">THE AETHERIUM</a>
-            <button id="theme-toggle-nav" class="nav-link nav-item button" onclick="toggleTheme()">THEME</button>
+            <a href="/meet_the_crew.html" class="nav-link w3-bar-item">TEAM :3</a>
+            <a href="/contact.html" class="nav-link w3-bar-item">CONTACT</a>
+            <a href="/community.html" class="nav-link w3-bar-item">COMMUNITY</a>
+            <button id="theme-toggle-nav" class="nav-link w3-bar-item w3-botton" onclick="toggleTheme()">DARK</button>
         </div>
 
         <!-- Hide right-floated links on medium and large screens and replace them with a menu icon -->
-        <a href="javascript:void(0)" class="nav-item button nav-right hide-large" onclick="openNav()">
-            <i class="fa fa-bars"></i>
+        <a href="javascript:void(0)" class="w3-bar-item w3-button w3-right w3-hide-large" onclick="w3_open()">
+            <img src="/assets/svgs/solid/bars.svg" alt="Menu icon" width="20">
         </a>
     </div>
 </div>
 
 <!-- Sidebar on small screens when clicking the menu icon -->
-<nav class="sidebar bar-block nav-black card animate-left hide-large" style="display:none" id="mySidebar">
-    <a href="javascript:void(0)" onclick="closeNav()" class="bar-item button large padding-16">Close ×</a>
-    <button id="theme-toggle-side" class="nav-link bar-item" onclick="toggleTheme()">THEME</button>
-    <a href="/index.html" onclick="closeNav()" class="nav-link bar-item button">HOME</a>
-    <a href="/pages/about_us.html" onclick="closeNav()" class="nav-link bar-item button">ABOUT</a>
-    <div class="nav-links nav-item dropdown">
-        <button class="nav-link button">OUR CREATIONS <i class="fa fa-caret-down"></i></button>
-        <div class="dropdown-content bar-block border">
-            <a href="/pages/pixelpals/" class="nav-link bar-item button">LIVING PORTRAITS</a>
-            <a href="/pages/frameforge/" class="nav-link bar-item button">ANIMATED HOMUNCULI</a>
-            <a href="/pages/cwp-studio/" class="nav-link bar-item button">INTERACTIVE CONTRAPTIONS</a>
+<nav class="w3-sidebar w3-bar-block w3-gray w3-card w3-animate-left w3-hide-large" style="display:none" id="mySidebar">
+    <a href="javascript:void(0)" onclick="w3_close()" class="w3-bar-item w3-button w3-large w3-padding-16">Close ×</a>
+    <button id="theme-toggle-side" class="nav-link w3-bar-item" onclick="toggleTheme()">DARK</button>
+    <a href="/index.html" onclick="w3_close()" class="nav-link w3-bar-item w3-button">HOME</a>
+    <a href="/about_us.html" onclick="w3_close()" class="nav-link w3-bar-item w3-button">ABOUT US</a>
+    <div class="nav-links w3-bar-item w3-dropdown-hover" style="padding: 0px 0px 0px 0px">
+        <button class="nav-link w3-botton">OUR WORK <i class="fa fa-caret-down"></i></button>
+        <div class="w3-dropdown-content w3-bar-block w3-border">
+            <a href="/pixelpulse.html" class="nav-link w3-bar-item w3-button">PIXELPULSE</a>
+            <a href="/frameforge.html" class="nav-link w3-bar-item w3-button">FRAMEFORGE</a>
+            <a href="/cwp_studio.html" class="nav-link w3-bar-item w3-button">CWP Studio</a>
         </div>
     </div>
-    <a href="/pages/meet_the_crew.html" class="nav-link nav-item">THE ARTISANS</a>
-    <a href="/pages/community.html" onclick="closeNav()" class="nav-link bar-item button">THE GUILD</a>
-    <a href="/pages/contact.html" onclick="closeNav()" class="nav-link bar-item button">CONTACT</a>
-    <a href="/pages/the_aetherium.html" onclick="closeNav()" class="nav-link bar-item button">THE AETHERIUM</a>
+    <a href="/meet_the_crew.html" class="nav-link w3-bar-item">TEAM :3</a>
+    <a href="/community.html" onclick="w3_close()" class="nav-link w3-bar-item w3-button">COMMUNITY</a>
+    <a href="/contact.html" onclick="w3_close()" class="nav-link w3-bar-item w3-button">CONTACT</a>
 </nav>
