--- a/docs/partials/footer.html
+++ b/docs/partials/footer.html
@@ -1,24 +1,88 @@
 <footer class="footer">
-  <div class="footer-container">
+  <div class="w3-container" id="myFooter" style="padding: 20px">
+    <div class="w3-row">
 
-    <div>
-      <img src="/assets/img/logo.png" class="footer-logo" alt="CWP Logo">
-      <p>Clockwork Production Studio<br>Creating for the community.</p>
+      <div class="w3-col l3 m12 s12 w3-center">
+        <img src="/assets/img/logo.png" alt="CWP LOGO" style="width: 125px">
+        <h3>ClockWorksProduction</h3>
+        <p>Here at CWP we aim to create enjoyable learning while having fun.<br>- ClockWork, 5/2025</p>
+      </div>
+
+      <div class="w3-col l9 m12 s12">
+        <h4>Contact us</h4>
+        <a href="mailto:clockworksproduction.stmain1@gmail.com">
+          clockworksproduction.stmain1@gmail.com
+        </a>
+        <p>Better to contact us via Discord or Reddit.</p>
+
+        <div class="w3-row">
+
+          <!-- Community -->
+          <div class="w3-col l4 m4 s12">
+            <h6>Our Community</h6>
+
+            <a href="https://www.reddit.com/r/ClockWorkProduction/">
+              <span class="material-symbols-rounded">public</span>
+            </a>
+
+            <a href="https://discord.gg/8Pspj3chzc">
+              <span class="material-symbols-rounded">group</span>
+            </a>
+
+            <a href="https://www.youtube.com/@theknowledgezoneinternatio6948">
+              <span class="material-symbols-rounded">live_tv</span>
+            </a>
+
+            <a href="https://www.twitch.tv/agentblacktigerstreams">
+              <span class="material-symbols-rounded">videogame_asset</span>
+            </a>
+          </div>
+
+          <!-- Social -->
+          <div class="w3-col l4 m4 s12">
+            <h6>Social Media</h6>
+
+            <a href="https://github.com/ClockWorksProduction">
+              <span class="material-symbols-rounded">code</span>
+            </a>
+
+            <a href="https://clockworks-production.itch.io/">
+              <span class="material-symbols-rounded">extension</span>
+            </a>
+
+            <a href="https://www.furaffinity.net/user/clockworkproduction">
+              <span class="material-symbols-rounded">pets</span>
+            </a>
+
+            <a href="https://bsky.app/profile/clockworkteam.bsky.social">
+              <span class="material-symbols-rounded">cloud</span>
+            </a>
+
+            <a href="https://x.com/ClockWorkP57131">
+              <span class="material-symbols-rounded">alternate_email</span>
+            </a>
+
+            <a href="https://web.facebook.com/profile.php?id=61575382072883">
+              <span class="material-symbols-rounded">share</span>
+            </a>
+          </div>
+
+          <!-- Support -->
+          <div class="w3-col l4 m4 s12">
+            <h6>Support us</h6>
+
+            <a href="https://ko-fi.com/clockworksproduction">
+              <span class="material-symbols-rounded">coffee</span>
+            </a>
+
+            <a href="https://patreon.com/ClockWorksProduction">
+              <span class="material-symbols-rounded">favorite</span>
+            </a>
+
+          </div>
+
+        </div>
+      </div>
     </div>
-
-    <div>
-      <h4>Pages</h4>
-      <a class="footer-link" href="/pages/about_us.html">About</a><br>
-      <a class="footer-link" href="/pages/community.html">Community</a><br>
-      <a class="footer-link" href="/pages/contact.html">Contact</a>
-    </div>
-
-    <div>
-      <h4>Divisions</h4>
-      <a class="footer-link" href="/pages/frameforge">FrameForge</a><br>
-      <a class="footer-link" href="/pages/pixelpals">PixelPals</a><br>
-      <a class="footer-link" href="/pages/cwp-studio">CWP Studio</a>
-    </div>
-
   </div>
 </footer>
